--- a/styles.css
+++ b/styles.css
@@ -13,3 +13,33 @@
 body{
 
 }
+
+nav > div > img{
+        height: 40px;
+        width: 40px;
+}
+
+nav > div > a{
+        font-weight: bolder;
+        font-size: larger;
+}
+
+.top_right{
+position: absolute right;
+}
+
+h2{
+        justify-content: center;
+}
+
+.discover-card{
+        padding-top: 25px;
+        justify-content: center;
+}
+.card-deck{
+        padding-top: 25px;
+}
+
+.Aloe{
+        size: 250px;
+}
